src/objects/RaceData__c.object
<CustomObject>
    <fields>
        <fullName>Contestant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contestant</label>
        <referenceTo>Contestant__c</referenceTo>
        <relationshipLabel>Race Data</relationshipLabel>
        <relationshipName>RaceData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DriverId__c</fullName>
        <label>Driver Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lap__c</fullName>
        <label>Lap</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RaceName__c</fullName>
        <label>Race Name</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Race</label>
        <referenceTo>Race__c</referenceTo>
        <relationshipLabel>Race Data</relationshipLabel>
        <relationshipName>RaceData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Oil Pressure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Temperature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sector Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pit Stop Times</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Race Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>DriverId__c</columns>
        <columns>Lap__c</columns>
        <columns>Sector__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RD-{00000000}</displayFormat>
        <label>Race Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Race Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>